[package]
name = "json-data-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order"] }
aho-corasick = { git = "https://github.com/diverta/aho-corasick", features = ["async"]}
